fix(FF-4715): visible corners

--- a/packages/switch-row/src/components/styles.module.scss
+++ b/packages/switch-row/src/components/styles.module.scss
@@ -47,6 +47,7 @@
   }
 
   border-radius: 4px;
+  overflow: hidden;
 
   &::before {
     content: '';
